# firstrade

./: .gitignore  Cargo.toml  README.md
examples/server/: Cargo.toml
examples/server/src/: main.rs  request.rs  utils.rs
src/: account.rs  error.rs  lib.rs  session.rs  url.rs  utils.rs
src/models/: account.rs  company.rs  mod.rs  quote.rs  session.rs  utils.rs  watchlist.rs
