[package]
name = "firstrade"
version = "0.1.1"
edition = "2024"
authors = ["Morris Tai <morristai01@gmail.com>"]
description = "A SDK for the Firstrade API"
license = "Apache-2.0"
repository = "https://github.com/morristai/firstrade"
documentation = "https://docs.rs/firstrade"
readme = "README.md"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
http = { version = "1.3" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.21.3"
typed-builder = "0.21.0"
tokio = "1.47.0"
axum = "0.8.4"
http-serde = "2.1.1"
pretty_assertions = "1.4.1"
async-recursion = "1.1.1"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
